# dynamic-island

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
screenshots/: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clipboard.rs  lib.rs  main.rs  media.rs  notifications.rs  system.rs  timer.rs  weather.rs
src/lib/components/: ClipboardWidget.svelte  Island.svelte  MediaWidget.svelte  NotificationWidget.svelte  Particles.svelte  SystemWidget.svelte  TimerWidget.svelte  WeatherWidget.svelte
src/lib/stores/: island.ts
src/lib/utils/: tauri.ts
src/routes/: +page.svelte
