[package]
name = "dynamic-island"
version = "1.0.0"
description = "Dynamic Island for Desktop — Anime Edition"
authors = ["thanvish21"]
edition = "2021"

[lib]
name = "dynamic_island_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
sysinfo = "0.35"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific deps can go here later

[target.'cfg(target_os = "windows")'.dependencies]
# Windows-specific deps can go here later
